--- a/.env
+++ b/.env
@@ -1,1 +1,16 @@
+# ─────────────────────────────────────────────────────────
+# Add these to your .env file (project root, next to package.json)
+# Get values from: https://console.firebase.google.com
+#   → Your project → Project Settings → General → Your apps → Web app
+# ─────────────────────────────────────────────────────────
+
+# Flutterwave (already have this)
 VITE_FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-6e230e3232d8df6371cc32bb853a47b4-X
+
+# Firebase
+VITE_FIREBASE_API_KEY=your_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your_project_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+VITE_FIREBASE_APP_ID=your_app_id
