--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.0",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "firebase": "^11.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
